# medvoice-ai

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 17f5b9704313_add_created_at_to_clinical_encounters.py  2c9aeb881015_add_index_to_patient_id.py  65e12de54a95_create_clinical_encounters.py  8045226c5429_add_created_at_to_clinical_encounters.py  896c083888fd_add_clinical_guidelines_tables.py  a4b43a615b9d_add_rag_document_schema.py  aa0454f42e77_make_fields_nullable.py  cdcd0f093a2f_add_updated_at_to_clinical_encounters.py  e3c94610f93e_fix_nullable_fields_and_types.py
app/: main.py
app/api/routes/: ask.py  clinical_encounters.py  query.py  search.py
app/core/: config.py
app/db/: base.py  session.py  test_connection.py
app/db/models/: __init__.py  clinical_encounter.py  document.py  document_chunk.py  query.py  query_evaluation.py
app/models/: __init__.py  clinical_guideline.py  guideline_chunk.py
app/repositories/: clinical_encounter_repository.py  guideline_repository.py  query_repository.py
app/schemas/: ask.py  clinical_encounter.py  search.py
app/scripts/: test_embedding_insert.py  test_semantic_search.py
app/services/: clinical_encounter_service.py  embeddings.py  lenguage_service.py  qa_service.py  rag_service.py
app/services/ingestion/: ada_ingest.py  embedder.py  pdf_loader.py  text_chunker.py
scripts/: ingest_ada.py
